<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg">

    <include
        android:id="@+id/included_toolbar"
        layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fontsize_36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/material_design_ui_kit_freebie"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fontsize_16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_et_containers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_container"
            android:layout_marginTop="@dimen/dp_80"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLength="30"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/fontsize_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/fontsize_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="@dimen/dp_10"
                android:textSize="@dimen/fontsize_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.99"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_shape"
                    android:hint="@string/country"
                    android:inputType="text"
                    android:maxLength="20"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/fontsize_16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.01"
                    android:background="@color/grey" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_shape"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:maxLength="20"
                    android:padding="@dimen/dp_10"
                    android:textSize="@dimen/fontsize_16sp" />

            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_et_containers"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/white"
            android:padding="@dimen/dp_10"
            android:text="@string/signup"
            android:textColor="@color/orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_signup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/already_have_an_account_log_in"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize_12sp" />
    </LinearLayout>
</RelativeLayout>