<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:gravity="center"
    android:paddingStart="@dimen/dp_16"
    android:paddingEnd="@dimen/dp_16">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/material_design_n_ui_kit_freebie"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize_24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/lorem_ipsum_is_simply_dummy_text_of_printing_and_typesetting_industry"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontsize_14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_container"
        android:layout_marginTop="@dimen/dp_80"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/signup"
            android:textColor="@color/orange" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/login"
            android:textColor="@color/orange" />
    </LinearLayout>
</RelativeLayout>